fixed 3d title and lights. As well as tried new solution for scroll grab on mobile

--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -11,6 +11,7 @@
     top: 0;
     left: 0;
     background-color: #5E605A;
+    border-bottom: 1px solid black;
   }
 
 
